retrieve_ENO_DEV1/objects/Performer__c.object
<CustomObject>
    <fields>
        <fullName>Vocal_range_Highest_note__c</fullName>
        <label>Vocal range - Highest note</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vocal_range_Lowest_note__c</fullName>
        <label>Vocal range - Lowest note</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waist__c</fullName>
        <label>Waist</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Waist_to_Ground__c</fullName>
        <label>Waist to Ground</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Waist_to_Knee__c</fullName>
        <label>Waist to Knee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wrap__c</fullName>
        <inlineHelpText>Please insert name of person/s who made/worked on the wrap</inlineHelpText>
        <label>Wrap</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Performer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Role__c</columns>
        <columns>How_name_should_appear_on_call_sheet__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Performer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Performers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>